<resources>
    <string name="app_name">CinemaPro</string>
    <string name="BottomNavHome">Home</string>
    <string name="BottomNavCatalog">Catalog</string>
    <string name="BottomNavContacts">Contacts</string>
    <string name="BottomNavDelivery">Delivery</string>
    <string name="topNavFavorite">Favorites</string>
    <string name="topNavSetting">Settings</string>
    <string name="infoCart">Info</string>
    <string name="account">Account</string>
    <string name="main">Main</string>
    <string name="video">Video</string>
    <string name="location">Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="also_take">With these products they also take</string>
    <string name="admin_setting">Administrator settings</string>
    <string name="add_category">Add category</string>
    <string name="clothing_category">Cloth</string>
    <string name="accessories_category">Accessories</string>
    <string name="food_category">Food</string>
    <string name="add_product">Add product</string>
    <string name="enter_name_product">Enter name product</string>
    <string name="enter_name_category">Enter name category</string>
    <string name="enter_price_product">Enter price product</string>
    <string name="enter_category_product">Enter category product</string>
    <string name="add">Add</string>
    <string name="check_products">Check products</string>
    <string name="check_all_products">Check all products</string>
    <string name="check_filter">Check filter</string>
    <string name="this_category_does_not_exist">This category does not exist, create it?</string>
    <string name="Nocreate">Do not create</string>
    <string name="create">create</string>
    <string name="attention">Attention</string>
    <string name="film_catalog">Films</string>
    <string name="product_catalog">Products</string>


    <string name="categories">Categories</string>
    <string name="addCategories">Add categories</string>
    <string name="editCategory">Edit category</string>


    <string name="product">Product</string>
    <string name="addProduct">Add product</string>
    <string name="editProduct">Edit product</string>


    <string name="labelEnterCategory">Enter category name</string>
    <string name="labelEnterNameProduct">Enter product name</string>
    <string name="labelEnterPriceProduct">Enter price</string>


    <string name="deleteAllCategories">Delete all categories</string>
    <string name="deleteAllProducts">Delete all products</string>


    <string name="fantasy">Fantasy</string>
    <string name="horror">Horror</string>
    <string name="fantastic">Fantastic</string>
    <string name="comedy">Comedy</string>


    <string name="tlotr">The Lord of the Rings: The Return of the King</string>
    <string name="swep2">Star Wars: Episode II - Attack of the Clones</string>
    <string name="harry_potter">Harry Potter and the Philosopher’s Stone</string>
    <string name="pirates">Pirates of the Caribbean: Curse of the Black Pearl</string>
    <string name="constantine">Constantine: Lord of Darkness</string>
    <string name="saw">Saw: Survival Game</string>
    <string name="major">Major Payne</string>


    <string name="constantine_time">121m</string>
    <string name="pirates_time">143m</string>
    <string name="harry_potter_time">152m</string>
    <string name="swep2Time">142m</string>
    <string name="tlotrTime">201m</string>
    <string name="sawTime">104m</string>
    <string name="majorTime">95m</string>

</resources>

