<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PanelEditProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_dark"
        android:paddingBottom="70dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerEditProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="@string/editCategory">

        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headerEditProduct"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/white"
            app:startIconTint="@color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/enter_name_product"
            app:hintTextColor="@color/white"
            app:startIconDrawable="@drawable/shopping"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp"
            android:textColorHint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditCategoryProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sectionEditProduct"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/white"
            app:startIconTint="@color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/enter_category_product"
            app:hintTextColor="@color/white"
            app:startIconDrawable="@drawable/shopping_bag"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp"
            android:textColorHint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editProductCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditPriceProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sectionEditCategoryProduct"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/white"
            app:startIconTint="@color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/enter_price_product"
            app:hintTextColor="@color/white"
            app:startIconDrawable="@drawable/money"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp"
            android:textColorHint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editProductBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sectionEditPriceProduct"
            android:textColor="@color/white"
            android:text="@string/editProduct"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:padding="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>